--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body{
 }
 
 #number_box{
-    height: 25rem;
-    width: 25rem;
+    height: 75vw;
+    width: 75vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,15 +28,15 @@ body{
     /* background-color: #0a8f0a; */
     background-color: #202020;
     /* border: 1rem solid #000; */
-    border: 2rem solid #000;
+    border: 5vw solid #000;
 }
 
 #number{
     color: #ffffff;
     /* font-size: 13rem; */
-    font-size: 15rem;
+    font-size: 40vw;
 }
 
 #spin{
-    height: 5rem;
+    height: 5vh;
 }
