--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
 #number{
     color: #ffffff;
     font-size: 40vw;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #spin{
